--- a/src/Ticket-Raising-Application/Styles/ClosedTickets.css
+++ b/src/Ticket-Raising-Application/Styles/ClosedTickets.css
@@ -39,3 +39,14 @@
 .closedhead{
     text-align: center;
 }
+.reopen{
+    margin-left: 35%;
+    margin-top: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+}
