--- a/src/Ticket-Raising-Application/Styles/TicketsPageClass.css
+++ b/src/Ticket-Raising-Application/Styles/TicketsPageClass.css
@@ -1,33 +1,58 @@
-.experiment{
+
+.experiment {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient( to right, #12C2E9 , #F64F59); 
+    background-size: 200% 200%;
+    animation: gradientAnimation 5s ease infinite;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 300px;
-    margin-left: 350px;
-    margin-top: 10%;
-    width:600px;
-    font-family: Arial, sans-serif;
-    border-style:outset;
-    box-shadow: 10px 10px 5px 12px lightgray;
-    background-image:url(Ticket-01.png);
-    background-size: 100% 100%;
-    border-radius: 10px;
-    background-color: rgb(13, 211, 201);
+    overflow: hidden;
 }
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+.tickets-page {
+    text-align: center;
+    background-image: url(Ticket-01.png);background-size: 100% 100%;
+    padding: 20px;
+    background-color: rgb(185, 184, 184);
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 1s ease-out;
+}
+
+
 .tickets-page button {
-    margin: 10px;
+    margin-top: 90px;
+    margin-left: 10px;
     padding: 15px 30px;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     background-color: #007bff;
     color: #fff;
     cursor: pointer;
-    font-size: 16px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease;
+    font-size: 18px;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 123, 255, 0.2);
 }
 
 .tickets-page button:hover {
     background-color: #0056b3;
+    transform: scale(1.05);
 }
