--- a/src/Ticket-Raising-Application/Styles/SignInPage.css
+++ b/src/Ticket-Raising-Application/Styles/SignInPage.css
@@ -1,28 +1,15 @@
-.background-container {
+.signin-container {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(135deg, #a2c2e8, #eba875,pink,rgb(147, 240, 147)); 
-    background-size: 200% 200%;
-    animation: gradientAnimation 5s ease infinite;
+    background-image: url(depositphotos_19750405.jpg);
+    background-size: 100% 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding-left: 15%;
     overflow: hidden;
-}
-
-@keyframes gradientAnimation {
-    0% {
-        background-position: 0% 0%;
-    }
-    50% {
-        background-position: 100% 100%;
-    }
-    100% {
-        background-position: 0% 0%;
-    }
 }
 
 .sign-in-page {
@@ -32,9 +19,9 @@
     justify-content: center;
     width: 400px;
     padding: 20px;
-    
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    background-color: rgba(255, 255, 255, 0.9); 
+    background-color: rgba(255,255,255,0.13);
+    backdrop-filter: blur(10px); 
     border-radius: 10px;
     position: relative;
     z-index: 1;
