--- a/src/Ticket-Raising-Application/Styles/RiseTicket.css
+++ b/src/Ticket-Raising-Application/Styles/RiseTicket.css
@@ -52,7 +52,7 @@
     padding: 12px 14px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: grey;
     color: #fff;
     cursor: pointer;
     font-size: 16px;
@@ -60,6 +60,6 @@
     box-shadow: 0 4px 8px rgba(0, 123, 255, 0.2);
 }
 .button-two button:hover{
-    background-color: #0056b3;
+    background-color:rgb(100, 100, 100);
     transform: scale(1.05);
 }
